--- a/activityservice/src/main/resources/application.yml
+++ b/activityservice/src/main/resources/application.yml
@@ -1,45 +1,5 @@
-
-server:
-  port: 8082
-
-
 spring:
   application:
     name: activity-service
-  data:
-    mongodb:
-      uri: mongodb://localhost:27017/fitness-activity
-      database: fitness-activity
-
-  rabbitmq:
-    host: localhost
-    port: 5672
-    username: guest
-    password: guest
-
-  cloud:
-    config:
-      enabled: false
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
-
-  instance:
-    prefer-ip-address: true
-    ip-address: 127.0.0.1
-    instance-id: ${spring.application.name}:${server.port}
-
-rabbitmq:
-  exchange:
-    name: fitness.exchange
-  queue:
-    name: activity.queue
-  routing:
-    key: activity.tracking
-
-
-
-
-
+  config:
+    import: optional:configserver:http://localhost:8888
