working in oauth2.0 integration and keycloak

--- a/configserver/src/main/resources/config/api-gateway.yml
+++ b/configserver/src/main/resources/config/api-gateway.yml
@@ -1,9 +1,11 @@
 spring:
   application:
     name: api-gateway
-
-
-
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          jwk-set-uri: http://localhost:8181/realms/fitness-oauth2/protocol/openid-connect/certs
   cloud:
     gateway:
       routes:
@@ -22,16 +24,17 @@ spring:
           predicates:
             - Path=/api/recommendations/**
 
-
 server:
   port: 8080
 
 eureka:
   client:
-    service-url:
+    serviceUrl:
       defaultZone: http://localhost:8761/eureka/
 
   instance:
     prefer-ip-address: true
     ip-address: 127.0.0.1
     instance-id: ${spring.application.name}:${server.port}
+
+
